// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/combined_system_message/LastUsers should match snapshot 1`] = `
<span>
  user_2 and 
  <a
    onClick={[Function]}
  >
    2 others
  </a>
   
  added to the channel by
   
  user_1
  .
</span>
`;

exports[`components/post_view/combined_system_message/LastUsers should match snapshot, expanded 1`] = `
<span>
  user_2, user_3 and user_4 
   
  added to the channel by
   
  user_1
  .
</span>
`;
